fix(grid): add z-index to column resizing handle

--- a/src/core/styles/components/grid/_grid-theme.scss
+++ b/src/core/styles/components/grid/_grid-theme.scss
@@ -393,6 +393,7 @@
         width: 4px;
         right: -2px;
         height: 100%;
+        z-index: 2;
     }
 
     %grid__resize-line {
